# build-ai-agents

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  CLAUDE.md  litellm.config.yaml  litellm_smoke_test.sh  pyproject.toml  seed.py
backend/agent_home/.claude/skills/briefing/: SKILL.md
backend/agent_home/.claude/skills/web-research/: SKILL.md
backend/mcp_server/: README.md  __init__.py  mcp-curl.sh  server.py
backend/scripts/: chat_smoke.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/agents/: __init__.py  briefing_agent.py  chat_agent.py  sandbox_lab_trends.py.example  tools.py
backend/src/models/: orm.py  rag.py  schemas.py
backend/src/routers/: briefings.py  chat.py  patients.py
backend/src/services/: briefing_chat_service.py  briefing_service.py  chat_service.py  document_processor.py  managed_briefing_service.py  patient_service.py  rag_service.py
backend/tests/: conftest.py  test_agent_tools.py  test_briefing_agent.py  test_briefing_service.py  test_briefings.py  test_chat_agent.py  test_chat_router.py  test_document_processor.py  test_managed_briefing_service.py  test_mcp_server.py  test_patients.py  test_rag_service.py
docs/: ARCH-AGENTIC-RAG.md  ARCHITECTURE.md  PLAN-ITERATION-1.md  PLAN-ITERATION-2.md  PLAN-ITERATION-3.md  RAG-ARCH.md  SCOPE-V1.md  SCOPE-V2.md  mcp-http-path.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
scripts/: ingest_docs.py  setup_managed_agent.py  (+7 more)
(+99 files in other folders)
